# rust-basics

./: Cargo.toml
.cargo/: config.toml
by-example/: Cargo.toml
by-example/00-helloworld/: format-print.rs  list-display.rs  std-display.rs  std-fmt.rs  std-format.rs
by-example/01-primitives/: array-slice.rs  literal.rs  primitives.rs  tuple.rs
by-example/02-custom-type/: constant.rs
by-example/02-custom-type/enum/: enum.rs  link-list.rs  type-aliase.rs  use.rs
by-example/02-customtype/: structure.rs
by-example/03-variable-binding/: shadow.rs
by-example/04-type/: cast.rs  inference.rs
by-example/05-conversion/: from-into.rs  try-from-into.rs
minikv/: Cargo.toml  REDAME.md
minikv/src/: errors.rs
minikv/src/data/: log_data_pos.rs  mod.rs
minikv/src/fio/: file_io.rs  mod.rs
minikv/src/index/: btree.rs  mod.rs
