[package]
name    = "by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "format-print"
path = "00-helloworld/format-print.rs"

[[bin]]
name = "std-fmt"
path = "00-helloworld/std-fmt.rs"

[[bin]]
name = "std-display"
path = "00-helloworld/std-display.rs"

[[bin]]
name = "list-display"
path = "00-helloworld/list-display.rs"

[[bin]]
name = "std-format"
path = "00-helloworld/std-format.rs"

[[bin]]
name = "primitive"
path = "01-primitives/primitives.rs"

[[bin]]
name = "literal"
path = "01-primitives/literal.rs"

[[bin]]
name = "tuple"
path = "01-primitives/tuple.rs"

[[bin]]
name = "array-slice"
path = "01-primitives/array-slice.rs"

[[bin]]
name = "structure"
path = "02-customtype/structure.rs"
[dependencies]
