[package]
name    = "by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "format-print"
path = "00-helloworld/format-print.rs"

[[bin]]
name = "std-fmt"
path = "00-helloworld/std-fmt.rs"

[[bin]]
name = "std-display"
path = "00-helloworld/std-display.rs"

[[bin]]
name = "list-display"
path = "00-helloworld/list-display.rs"

[[bin]]
name = "std-format"
path = "00-helloworld/std-format.rs"

[[bin]]
name = "primitive"
path = "01-primitives/primitives.rs"

[[bin]]
name = "literal"
path = "01-primitives/literal.rs"

[[bin]]
name = "tuple"
path = "01-primitives/tuple.rs"

[[bin]]
name = "array-slice"
path = "01-primitives/array-slice.rs"

[[bin]]
name = "structure"
path = "02-custom-type/structure.rs"

[[bin]]
name = "enum"
path = "02-custom-type/enum/enum.rs"

[[bin]]
name = "type-aliase"
path = "02-custom-type/enum/type-aliase.rs"

[[bin]]
name = "use"
path = "02-custom-type/enum/use.rs"

[[bin]]
name = "c-like"
path = "02-custom-type/enum/c-like.rs"

[[bin]]
name = "link-list"
path = "02-custom-type/enum/link-list.rs"

[[bin]]
name = "constant"
path = "02-custom-type/constant.rs"

[[bin]]
name = "variable-binding"
path = "03-variable-binding/variable-binding.rs"

[[bin]]
name = "mutable"
path = "03-variable-binding/mutable.rs"

[[bin]]
name = "shadow"
path = "03-variable-binding/shadow.rs"

[[bin]]
name = "declare"
path = "03-variable-binding/declare.rs"

[[bin]]
name = "freeze"
path = "03-variable-binding/freeze.rs"

[[bin]]
name = "cast"
path = "04-type/cast.rs"

[[bin]]
name = "literals"
path = "04-type/literals.rs"

[[bin]]
name = "inference"
path = "04-type/inference.rs"

[[bin]]
name = "aliase"
path = "04-type/aliase.rs"

[[bin]]
name = "from-into"
path = "05-conversion/from-into.rs"

[[bin]]
name = "try-from-into"
path = "05-conversion/try-from-into.rs"

[[bin]]
name = "convert-to-string"
path = "05-conversion/convert-to-string.rs"

[[bin]]
name = "expression"
path = "06-expression/expression.rs"

[[bin]]
name = "if-else"
path = "07-flow-control/if-else.rs"

[[bin]]
name = "loop"
path = "07-flow-control/loop/loop.rs"
[dependencies]
